# Jetson_clip

./: .gitignore
clip-distillation-master/: compute_openclip_embeddings.py  compute_openclip_text_embeddings.py  distil_model_embeddings.py  onnx_info.py  predict_pytorch.py
clip-distillation-master/data/: text_embeddings.npy  text_prompts.txt
clip-distillation-master/data/embeddings/: 00000.npy  00001.npy  00002.npy  00003.npy  00004.npy  00005.npy  00006.npy  00007.npy  00008.npy  00009.npy  00010.npy  00011.npy  00012.npy  00013.npy  00014.npy  00015.npy  00016.npy  00017.npy  00018.npy  00019.npy  00020.npy  00021.npy  00022.npy  00023.npy  00024.npy  00025.npy  00026.npy  00027.npy  00028.npy  00029.npy  00030.npy  00031.npy  00032.npy  00033.npy  00034.npy  00035.npy  00036.npy  00037.npy  00038.npy  00039.npy  (+8951 more)
clip-distillation-master/data/images/: 08991.png.baiduyun.downloading  08992.png.baiduyun.downloading  08993.png.baiduyun.downloading  08994.png.baiduyun.downloading  08995.png.baiduyun.downloading  08996.png.baiduyun.downloading  08997.png.baiduyun.downloading  08998.png.baiduyun.downloading
clip-distillation-master/data/models/resnet18/: args.json
clip-distillation-master/data/models/resnet18/log/: events.out.tfevents.1722157834.lucre-Lenovo-Legion-R9000P2021H.86387.0  events.out.tfevents.1722159729.lucre-Lenovo-Legion-R9000P2021H.96793.0  events.out.tfevents.1722159772.lucre-Lenovo-Legion-R9000P2021H.96844.0  events.out.tfevents.1722172069.lucre-Lenovo-Legion-R9000P2021H.105357.0
clip-jetson/: CMakeLists.txt  clip  clip.cpp  compute_probs.py  sampleOpenclip.cpp  test.npy
clip-jetson/common/: argsParser.h  buffers.h  common.h
clip-jetson/include/: logging.h  utils.h
clip-jetson/utils/: embedding_to_probs.cpp  image_to_preprocess.cpp  npy_to_vector.cpp  utils.cpp
